--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div id="tg-id">Загрузка...</div>
   <div id="username">Загрузка...</div>
+  <div id="photo_url">Загрузка...</div>
 
 <script>
   // Проверяем, доступен ли объект initDataUnsafe
@@ -15,9 +16,11 @@
     // Получаем Telegram ID из initDataUnsafe
     var tgId = window.Telegram.WebApp.initDataUnsafe.user.id;
     var username = window.Telegram.WebApp.initDataUnsafe.user.username;
+    var photo_url = windows.telegram.WebApp.initDataUnsafe.user.photo_url
     // Отображаем ID на сайте
     document.getElementById('tg-id').textContent = 'Ваш Telegram ID: ' + tgId;
     document.getElementById('username').textContent = 'Ваш Telegram Username: ' + username;
+     document.getElementById('photo_url').textContent = 'Ваш Telegram photo_url: ' +photo_url;
 
     // Отправляем ID на сервер
     fetch('https://afd3-89-22-177-227.ngrok-free.app/receive_tg_id', {
