--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
 
     // Отправляем ID на сервер
-    fetch('https://7mt2qo-176-118-32-227.ru.tuna.am/get_last_game', {
+    fetch('https://rpc2l1-176-118-32-227.ru.tuna.am/get_last_game', {
       method: 'GET',
       headers: {
         'Content-Type': 'application/json',
